--- a/homework3/bower.json
+++ b/homework3/bower.json
@@ -1,15 +1,16 @@
 {
   "name": "auction",
   "dependencies": {
-    "angular"         : "1.3.5",
-    "angular-route"   : "1.3.5",
-    "bootstrap"       : "^3.3.1",
-    "es5-shim"        : "^4.0.5",
-    "json3"           : "^3.3.2",
-    "lodash"          : "^2.4.1"
+    "angular": "1.3.5",
+    "angular-route": "1.3.5",
+    "bootstrap": "^3.3.1",
+    "es5-shim": "^4.0.5",
+    "json3": "^3.3.2",
+    "lodash": "^2.4.1",
+    "moment": "~2.9.0"
   },
   "devDependencies": {
-    "angular-mocks"   : "1.3.5",
+    "angular-mocks": "1.3.5",
     "angular-scenario": "1.3.5"
   },
   "appPath": "app"
